# mdc0x_driver

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
i2c_raw/: README.md  build.rs  rust-toolchain.toml
i2c_raw/.cargo/: config.toml
i2c_raw/src/: acquisition.rs
src/: acquisition.rs  main.rs  uart.rs
src/mdc04_driver/: crc.rs  mod.rs
